fix dock z-index

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -125,6 +125,9 @@ main.scrollable > .main-content {
   padding-bottom: 60px;
 }
 
+.dock-list {
+  z-index: 1001;
+}
 #dock-chat {
   max-width: 75%;
 }
